// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenRequest: index mapStateToProps with default state 1`] = `
Object {
  "currentUser": Object {
    "accountAddress": "123456789012345678901234567890123",
  },
  "isTokenOpen": true,
}
`;

exports[`TokenRequest: index render component when modal is close 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TokenRequest
    currentUser={
      Object {
        "accountAddress": "123456789012345678901234567890123",
      }
    }
    isTokenOpen={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "canOutsideClickClose": true,
      "children": <ReduxForm
        accountAddress="123456789012345678901234567890123"
        currentUser={
          Object {
            "accountAddress": "123456789012345678901234567890123",
          }
        }
        faucetRequest={undefined}
      />,
      "className": "pt-dark token-request-dialog",
      "isOpen": false,
      "onClose": undefined,
      "title": "Request Tokens",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accountAddress": "123456789012345678901234567890123",
        "currentUser": Object {
          "accountAddress": "123456789012345678901234567890123",
        },
        "faucetRequest": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "canOutsideClickClose": true,
        "children": <ReduxForm
          accountAddress="123456789012345678901234567890123"
          currentUser={
            Object {
              "accountAddress": "123456789012345678901234567890123",
            }
          }
          faucetRequest={undefined}
        />,
        "className": "pt-dark token-request-dialog",
        "isOpen": false,
        "onClose": undefined,
        "title": "Request Tokens",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accountAddress": "123456789012345678901234567890123",
          "currentUser": Object {
            "accountAddress": "123456789012345678901234567890123",
          },
          "faucetRequest": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`TokenRequest: index render component when modal is open 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TokenRequest
    currentUser={
      Object {
        "accountAddress": "123456789012345678901234567890123",
      }
    }
    isTokenOpen={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "canOutsideClickClose": true,
      "children": <ReduxForm
        accountAddress="123456789012345678901234567890123"
        currentUser={
          Object {
            "accountAddress": "123456789012345678901234567890123",
          }
        }
        faucetRequest={undefined}
      />,
      "className": "pt-dark token-request-dialog",
      "isOpen": true,
      "onClose": undefined,
      "title": "Request Tokens",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accountAddress": "123456789012345678901234567890123",
        "currentUser": Object {
          "accountAddress": "123456789012345678901234567890123",
        },
        "faucetRequest": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "canOutsideClickClose": true,
        "children": <ReduxForm
          accountAddress="123456789012345678901234567890123"
          currentUser={
            Object {
              "accountAddress": "123456789012345678901234567890123",
            }
          }
          faucetRequest={undefined}
        />,
        "className": "pt-dark token-request-dialog",
        "isOpen": true,
        "onClose": undefined,
        "title": "Request Tokens",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accountAddress": "123456789012345678901234567890123",
          "currentUser": Object {
            "accountAddress": "123456789012345678901234567890123",
          },
          "faucetRequest": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
